examples/test/testpolicy11767.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11767
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key1: value16
      key34: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value44
      podSelector:
        matchLabels:
          key14: value12
          key16: value36
          key45: value25
